packages/libobscur/net_errors.txt
    Checking stable_deref_trait v1.2.1
    Checking windows-link v0.2.1
    Checking smallvec v1.15.1
    Checking litemap v0.8.1
    Checking writeable v0.6.2
    Checking windows_x86_64_msvc v0.53.1
    Checking zerofrom v0.1.6
    Checking icu_normalizer_data v2.1.1
    Checking icu_properties_data v2.1.2
    Checking log v0.4.29
    Checking pin-project-lite v0.2.16
    Checking scopeguard v1.2.0
    Checking windows-targets v0.53.5
    Checking thiserror v1.0.69
   Compiling serde v1.0.228
    Checking utf8_iter v1.0.4
    Checking windows-sys v0.61.2
    Checking yoke v0.8.1
    Checking lock_api v0.4.14
    Checking windows-sys v0.60.2
    Checking percent-encoding v2.3.2
    Checking ahash v0.8.12
    Checking parking_lot_core v0.9.12
    Checking tracing-core v0.1.36
    Checking slab v0.4.12
    Checking zerovec v0.11.5
    Checking zerotrie v0.2.3
    Checking form_urlencoded v1.2.2
    Checking futures-task v0.3.32
    Checking futures-core v0.3.32
    Checking parking_lot v0.12.5
    Checking futures-sink v0.3.32
    Checking hashbrown v0.14.5
   Compiling uniffi_meta v0.28.3
    Checking httparse v1.10.1
    Checking futures-util v0.3.32
    Checking http v1.4.0
    Checking sha1 v0.10.6
    Checking lazy_static v1.5.0
    Checking cargo-platform v0.1.9
   Compiling toml v0.5.11
   Compiling bincode v1.3.3
    Checking data-encoding v2.10.0
    Checking byteorder v1.5.0
    Checking tinystr v0.8.2
    Checking potential_utf v0.1.4
    Checking icu_locale_core v2.1.1
    Checking icu_collections v2.1.1
    Checking utf-8 v0.7.6
    Checking hashlink v0.9.1
    Checking cargo_metadata v0.15.4
    Checking uniffi_core v0.28.3
    Checking sharded-slab v0.1.7
    Checking tracing-log v0.2.0
    Checking libsqlite3-sys v0.28.0
    Checking thread_local v1.1.9
    Checking either v1.15.0
    Checking fallible-iterator v0.3.0
    Checking socket2 v0.6.2
    Checking bitflags v2.11.0
    Checking fallible-streaming-iterator v0.1.9
    Checking tracing v0.1.44
    Checking icu_provider v2.1.1
    Checking rusqlite v0.31.0
    Checking icu_properties v2.1.2
    Checking icu_normalizer v2.1.1
   Compiling uniffi_macros v0.28.3
    Checking idna_adapter v1.2.1
    Checking idna v1.1.0
    Checking url v2.5.8
    Checking uniffi v0.28.3
    Checking mio v1.1.1
    Checking schannel v0.1.28
    Checking nu-ansi-term v0.50.3
    Checking tracing-subscriber v0.3.22
    Checking native-tls v0.2.18
    Checking tokio v1.49.0
    Checking tungstenite v0.21.0
    Checking tokio-native-tls v0.3.1
    Checking tokio-socks v0.5.2
    Checking tokio-tungstenite v0.21.0
    Checking libobscur v0.1.0 (E:\Web Project\experimental-workspace\newstart\packages\libobscur)
warning: unused imports: `connect_async` and `tungstenite::protocol::Message`
 --> src\net\relay.rs:3:25
  |
3 | use tokio_tungstenite::{connect_async, tungstenite::protocol::Message};
  |                         ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `SinkExt` and `StreamExt`
 --> src\net\relay.rs:6:20
  |
6 | use futures_util::{StreamExt, SinkExt};
  |                    ^^^^^^^^^  ^^^^^^^

warning: unused imports: `error` and `warn`
 --> src\net\relay.rs:7:21
  |
7 | use tracing::{info, error, warn};
  |                     ^^^^^  ^^^^

error[E0277]: the trait bound `std::string::String: ToProxyAddrs` is not satisfied
  --> src\net\relay.rs:53:48
   |
53 |             let stream = Socks5Stream::connect(proxy, (host.as_str(), port))
   |                          --------------------- ^^^^^ the trait `ToProxyAddrs` is not implemented for `std::string::String`
   |                          |
   |                          required by a bound introduced by this call
   |
   = help: the trait `ToProxyAddrs` is implemented for `str`
   = note: required for `&std::string::String` to implement `ToProxyAddrs`
note: required by a bound in `Socks5Stream::<tokio::net::TcpStream>::connect`
  --> C:\Users\Administrator\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-socks-0.5.2\src\tcp\socks5.rs:72:12
   |
70 |     pub async fn connect<'t, P, T>(proxy: P, target: T) -> Result<Socks5Stream<TcpStream>>
   |                  ------- required by a bound in this associated function
71 |     where
72 |         P: ToProxyAddrs,
   |            ^^^^^^^^^^^^ required by this bound in `Socks5Stream::<TcpStream>::connect`

error[E0277]: the trait bound `std::string::String: ToProxyAddrs` is not satisfied
  --> src\net\relay.rs:53:26
   |
53 |             let stream = Socks5Stream::connect(proxy, (host.as_str(), port))
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ToProxyAddrs` is not implemented for `std::string::String`
   |
   = help: the trait `ToProxyAddrs` is implemented for `str`
   = note: required for `&std::string::String` to implement `ToProxyAddrs`
note: required by a bound in `Socks5Stream::<tokio::net::TcpStream>::connect`
  --> C:\Users\Administrator\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-socks-0.5.2\src\tcp\socks5.rs:72:12
   |
70 |     pub async fn connect<'t, P, T>(proxy: P, target: T) -> Result<Socks5Stream<TcpStream>>
   |                  ------- required by a bound in this associated function
71 |     where
72 |         P: ToProxyAddrs,
   |            ^^^^^^^^^^^^ required by this bound in `Socks5Stream::<TcpStream>::connect`

error[E0277]: the trait bound `std::string::String: ToProxyAddrs` is not satisfied
  --> src\net\relay.rs:54:18
   |
54 |                 .await
   |                  ^^^^^ the trait `ToProxyAddrs` is not implemented for `std::string::String`
   |
   = help: the trait `ToProxyAddrs` is implemented for `str`
   = note: required for `&std::string::String` to implement `ToProxyAddrs`
note: required by a bound in `Socks5Stream::<tokio::net::TcpStream>::connect`
  --> C:\Users\Administrator\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-socks-0.5.2\src\tcp\socks5.rs:72:12
   |
70 |     pub async fn connect<'t, P, T>(proxy: P, target: T) -> Result<Socks5Stream<TcpStream>>
   |                  ------- required by a bound in this associated function
71 |     where
72 |         P: ToProxyAddrs,
   |            ^^^^^^^^^^^^ required by this bound in `Socks5Stream::<TcpStream>::connect`

For more information about this error, try `rustc --explain E0277`.
warning: `libobscur` (lib) generated 3 warnings
error: could not compile `libobscur` (lib) due to 3 previous errors; 3 warnings emitted
